se configura sonarscaner para el proyecto

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     volumes:
       - ./app/:/app
     restart: always
+    ports:
+      - 8010:8000
     depends_on: 
       - bd
 volumes:
