se organiza sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=TeamTCJ
 sonar.sources=app
-sonar.host.url=http://127.0.0.1:9000
+sonar.host.url=http://teamtcj.com:9000
 sonar.login=2d8241e4779bbf8cc9eae4f980f970aaaa5b077d
 sonar.exclusions=app/static/**/*
+sonar.python.flake8.reportPaths=flakereport.txt
